# AI-G-DAO

./: INTEGRATION.md  README.md  deploy.py  setup_deployment.py
.github/workflow/: sync-to-org.yml
.github/workflows/: main.yml
contracts/: package-lock.json  package.json
contracts/climate-aigdao/: README.md  climate-aigdao.code-workspace  package-lock.json
contracts/climate-dao/: package-lock.json  package.json
contracts/climate-dao/projects/climate-dao/: .algokit.toml  README.md  package-lock.json  package.json  pyproject.toml
contracts/climate-dao/projects/climate-dao/.algokit/: .copier-answers.yml
contracts/climate-dao/projects/climate-dao/smart_contracts/: __init__.py  __main__.py  contract.py  deployment_info.json  index.ts
contracts/climate-dao/projects/climate-dao/smart_contracts/artifacts/: approval.teal
contracts/climate-dao/projects/climate-dao/smart_contracts/cliamte_dao/: contract.algo.ts  deploy-config.ts
contracts/climate-dao/projects/climate-dao/smart_contracts/climate/: contract.py  deploy_config.py
contracts/climate-dao/projects/climate-dao/smart_contracts/climate_dao/: contract.py  deploy_config.py
docs/: 1.Introduction.md  1.txt  10.Problem Statement.md  11.Multi-Industry Adaptation Guide.md  12.ARC Standards Compliance Report.md  2.System Overview.md  3.Architecture.md  4.Core Components.md  5. Smart Contracts.md  6. AI Governance System.md  7. Climate Impact Credits.md  8. Token Economics.md  9.Governance Framework.md  README.md
frontend/: jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.js  tailwind.config.ts
frontend/__tests__/: components.test.js
frontend/app/: layout.tsx
frontend/climate-dao/: package-lock.json  package.json
test/: QUICK_REFERENCE.md  TEST_README.md  jest.setup.js  package.json  run_tests.py
(+80 files in other folders)
