[tool.poetry]
name = "climate-dao"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Aneesh <aneeshsharmag@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "~0"
pyteal = "0.24.1"
setuptools = "^80.9.0"
algokit-utils = "^4.1.0"

[tool.poetry.group.dev.dependencies]
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

